# JobSearch-LinkedIn-Marketing

personalmarketing/: .gitignore  README.md  linkedin_posts.md  optimized_content.md  pyproject.toml  research_blogs.md
personalmarketing/knowledge/: user_preference.txt
personalmarketing/resources/drafts/: linkedin_content_calendar.md  linkedin_strategy.md
personalmarketing/resources/drafts/linkedin_posts/: linkedin_posts_week1.md  linkedin_posts_week2.md
personalmarketing/resources/drafts/research_blogs/: scaling-llm-rag-systems-100m-qpm.md
personalmarketing/src/personalmarketing/: crew.py  main.py
personalmarketing/src/personalmarketing/config/: agents.yaml  tasks.yaml
personalmarketing/src/personalmarketing/tools/: custom_tool.py
