[project]
name = "personalmarketing"
version = "0.1.0"
description = "personalMarketing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
personalmarketing = "personalmarketing.main:run"
run_crew = "personalmarketing.main:run"
train = "personalmarketing.main:train"
replay = "personalmarketing.main:replay"
test = "personalmarketing.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
